--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "confusion",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nikeshthapa255.github.io/reactpractice/",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "bootstrap-social": "^5.1.1",
     "core-js": "^3.1.4",
     "cross-fetch": "^3.0.4",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^2.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-animation-components": "^3.0.0",
@@ -24,6 +26,8 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
